src/objects/Psychosocial_MH__c.object
<CustomObject>
    <fields>
        <fullName>Apt_No__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Apt. No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aPsychosocial MH</relationshipLabel>
        <relationshipName>aPsychosocial_MH</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assessment_Result__c</fullName>
        <description>Set by workflow, used for display on related lists</description>
        <label>Assessment Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_No__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Building No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_c__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>CEP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator_Comments__c</fullName>
        <label>Case Coordinator Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Client Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_based_Care_Recommended__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Community-based Care Recommended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Current Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DO_YOU_HAVE_INSURANCE_C__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <globalPicklist>YesNo</globalPicklist>
        <label>Do you have Insurance?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Insurance__c</fullName>
        <label>Do you have Insurance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_Test_Frequency__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Drug Test Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Biweekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drugs_Used_Other__c</fullName>
        <description>Copied to Contact when assessment complete: Substance Abuse 
Copied from Contact when Assessment saved until completion: Psychosocial</description>
        <label>Drugs Used (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs_Used__c</fullName>
        <description>Copied to Contact when assessment complete: Substance Abuse
Copied from Contact when Assessment saved until completion: Psychosocial</description>
        <label>Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants - Mild</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_Section_1__c</fullName>
        <label>Education Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Section_2__c</fullName>
        <label>Education Section 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Peers_Section_1__c</fullName>
        <label>Family &amp; Peers Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indication_of_Phys_Health_Problem__c</fullName>
        <label>Indication of Phys Health Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <label>Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Insurance Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAYSI_2__c</fullName>
        <label>MAYSI - 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_History__c</fullName>
        <label>Mental Health History</label>
        <picklist>
            <picklistValues>
                <fullName>Suicide attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychotropic med–ever taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychotropic med–prescribed not taken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling/mental health treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using alcohol/drugs to cope w/ emotions</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Issues_at_Interview__c</fullName>
        <label>Mental Health Issues at Interview</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Section_1__c</fullName>
        <label>Mental Health Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Neighborhood</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTHER_PHYS_HEALTH_PROBLEM__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>OTHER PHYS HEALTH PROBLEM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Section_1__c</fullName>
        <label>Physical Health Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <formula>Building_No__c &amp;&apos; &apos;&amp;Street__c&amp;if(not(isblank(Apt_No__c)),&quot; - Apt &quot;&amp;Apt_No__c,&apos; &apos;)&amp;BR()&amp; 
City__c&amp;&apos;, &apos;&amp;State__c&amp;&apos; &apos;&amp; Zip_Code__c &amp;BR()&amp; 
Neighborhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrals_Made_YN__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Were referrals made for service?</inlineHelpText>
        <label>Referrals Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Street</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Section_1__c</fullName>
        <label>Substance Abuse Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Recommendations_Section_1__c</fullName>
        <label>Summary &amp; Recommendations Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Drugs_Used_Other__c</fullName>
        <label>Update Drugs Used (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Drugs_Used__c</fullName>
        <label>Update Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marijuana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opiates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Update_Has_Insurance__c</fullName>
        <label>Update Has Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Insurance_Number__c</fullName>
        <label>Update Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Insurance_Provider__c</fullName>
        <label>Update Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <inlineHelpText>Copied from Contact until assessment complete</inlineHelpText>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>aPsychosocial MH</label>
    <nameField>
        <displayFormat>PH-{0000}</displayFormat>
        <label>aPsychosocial MH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aPsychosocial MH</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>